// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkFee renders a NetworkFee in a loading state 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 16,
      "justifyContent": "space-between",
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "color": "#222222",
        "display": "flex",
        "fontFamily": "Basel-Book",
        "fontSize": 17,
        "lineHeight": 24,
      }
    }
    suppressHighlighting={true}
  >
    Network fee
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3939391a",
          "borderBottomColor": "transparent",
          "borderBottomLeftRadius": 12,
          "borderBottomRightRadius": 12,
          "borderBottomWidth": 1,
          "borderColor": "transparent",
          "borderLeftColor": "transparent",
          "borderLeftWidth": 1,
          "borderRightColor": "transparent",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "borderTopColor": "transparent",
          "borderTopLeftRadius": 12,
          "borderTopRightRadius": 12,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#393939",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 13,
            "lineHeight": 16,
            "paddingTop": 1,
          }
        }
        suppressHighlighting={true}
      >
        Ethereum
      </Text>
    </View>
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#222222",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 17,
          "lineHeight": 24,
        }
      }
      suppressHighlighting={true}
    >
      •
    </Text>
    <View
      sentry-label="SpinningLoader"
      style={
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 0,
          "transform": [
            {
              "rotateZ": "0deg",
            },
          ],
        }
      }
    >
      <svg
        color="#222222"
        data-file-name="SvgCircleSpinner"
        height={20}
        width={20}
      />
    </View>
  </View>
</View>
`;

exports[`NetworkFee renders a NetworkFee normally 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 16,
      "justifyContent": "space-between",
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "color": "#222222",
        "display": "flex",
        "fontFamily": "Basel-Book",
        "fontSize": 17,
        "lineHeight": 24,
      }
    }
    suppressHighlighting={true}
  >
    Network fee
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3939391a",
          "borderBottomColor": "transparent",
          "borderBottomLeftRadius": 12,
          "borderBottomRightRadius": 12,
          "borderBottomWidth": 1,
          "borderColor": "transparent",
          "borderLeftColor": "transparent",
          "borderLeftWidth": 1,
          "borderRightColor": "transparent",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "borderTopColor": "transparent",
          "borderTopLeftRadius": 12,
          "borderTopRightRadius": 12,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#393939",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 13,
            "lineHeight": 16,
            "paddingTop": 1,
          }
        }
        suppressHighlighting={true}
      >
        Ethereum
      </Text>
    </View>
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#222222",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 17,
          "lineHeight": 24,
        }
      }
      suppressHighlighting={true}
    >
      •
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#222222",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 17,
            "lineHeight": 24,
          }
        }
        suppressHighlighting={true}
      >
        $500.00
      </Text>
    </View>
  </View>
</View>
`;

exports[`NetworkFee renders a NetworkFee with a warning 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 16,
      "justifyContent": "space-between",
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "color": "#222222",
        "display": "flex",
        "fontFamily": "Basel-Book",
        "fontSize": 17,
        "lineHeight": 24,
      }
    }
    suppressHighlighting={true}
  >
    Network fee
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3939391a",
          "borderBottomColor": "transparent",
          "borderBottomLeftRadius": 12,
          "borderBottomRightRadius": 12,
          "borderBottomWidth": 1,
          "borderColor": "transparent",
          "borderLeftColor": "transparent",
          "borderLeftWidth": 1,
          "borderRightColor": "transparent",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "borderTopColor": "transparent",
          "borderTopLeftRadius": 12,
          "borderTopRightRadius": 12,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#393939",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 13,
            "lineHeight": 16,
            "paddingTop": 1,
          }
        }
        suppressHighlighting={true}
      >
        Ethereum
      </Text>
    </View>
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#222222",
          "display": "flex",
          "fontFamily": "Basel-Book",
          "fontSize": 17,
          "lineHeight": 24,
        }
      }
      suppressHighlighting={true}
    >
      •
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#FEB239",
            "display": "flex",
            "fontFamily": "Basel-Book",
            "fontSize": 17,
            "lineHeight": 24,
          }
        }
        suppressHighlighting={true}
      >
        $500.00
      </Text>
      <View
        style={
          {
            "alignItems": "stretch",
            "flexDirection": "column",
            "gap": 0,
            "marginLeft": 4,
          }
        }
      >
        <svg
          color="#FEB239"
          data-file-name="SvgInfoCircle"
          height={20}
          width={20}
        />
      </View>
    </View>
  </View>
</View>
`;
